--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,12 +57,12 @@ jobs:
 
   # Runs rustfmt + tests + clippy on the main supported platforms.
   #
-  # Note that m1 macOS is tested via CirrusCI.
+  # TODO: In the future, when ARM runners are available on github, switch ARM targets off of cross.
   supported:
     needs: pre-job
     if: ${{ needs.pre-job.outputs.should_skip != 'true' }}
     runs-on: ${{ matrix.info.os }}
-    timeout-minutes: 18
+    timeout-minutes: 10
     strategy:
       fail-fast: false
       matrix:
@@ -143,7 +143,7 @@ jobs:
     needs: pre-job
     runs-on: ${{ matrix.info.os }}
     if: ${{ needs.pre-job.outputs.should_skip != 'true' }}
-    timeout-minutes: 20
+    timeout-minutes: 10
     strategy:
       fail-fast: false
       matrix:
@@ -292,7 +292,7 @@ jobs:
     name: "Test using VMs"
     needs: pre-job
     runs-on: "ubuntu-latest"
-    timeout-minutes: 30
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
