--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ doctest = true
 doc = true
 
 [profile.dev.package."*"]
-# Compile dependencies with optimizations on even in debug mode.
+# Compile dependencies with optimizations enabled, even in debug mode.
 opt-level = 3
 
 [profile.no-opt]
@@ -79,8 +79,8 @@ logging = ["fern", "log", "time"]
 generate_schema = ["schemars", "serde_json", "strum"]
 
 [dependencies]
-anyhow = "1.0.86"
-backtrace = "0.3.73"
+anyhow = "1.0.87"
+backtrace = "0.3.74"
 cfg-if = "1.0.0"
 clap = { version = "4.5.16", features = ["default", "cargo", "wrap_help", "derive"] }
 concat-string = "1.0.1"
@@ -94,7 +94,7 @@ indoc = "2.0.5"
 itertools = "0.13.0"
 nvml-wrapper = { version = "0.10.0", optional = true, features = ["legacy-functions"] }
 regex = "1.10.6"
-serde = { version = "1.0.209", features = ["derive"] }
+serde = { version = "1.0.210", features = ["derive"] }
 starship-battery = { version = "0.9.1", optional = true }
 sysinfo = "=0.30.13"
 toml_edit = { version = "0.22.17", features = ["serde"] }
@@ -110,14 +110,14 @@ time = { version = "0.3.36", features = ["local-offset", "formatting", "macros"]
 
 # These are just used for JSON schema generation.
 schemars = { version = "0.8.21", optional = true }
-serde_json = { version = "1.0.127", optional = true }
+serde_json = { version = "1.0.128", optional = true }
 strum = { version = "0.26.3", features = ["derive"], optional = true }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.158"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-rustix = { version = "0.38.35", features = ["fs", "param"] }
+rustix = { version = "0.38.36", features = ["fs", "param"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10.0"
@@ -148,8 +148,8 @@ predicates = "3.1.2"
 portable-pty = "0.8.1"
 
 [build-dependencies]
-clap = { version = "4.5.16", features = ["default", "cargo", "wrap_help", "derive"] }
-clap_complete = "4.5.24"
+clap = { version = "4.5.17", features = ["default", "cargo", "wrap_help", "derive"] }
+clap_complete = "4.5.26"
 clap_complete_nushell = "4.5.3"
 clap_complete_fig = "4.5.2"
 clap_mangen = "0.2.23"
