--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -77,13 +77,13 @@
 # How much data is stored at once in terms of time.
 #retention = "10m"
 # Where to place the legend for the memory widget. One of "none", "top-left", "top", "top-right", "left", "right", "bottom-left", "bottom", "bottom-right".
-#memory_legend = "TopRight"
+#memory_legend = "top-right"
 # Where to place the legend for the network widget. One of "none", "top-left", "top", "top-right", "left", "right", "bottom-left", "bottom", "bottom-right".
-#network_legend = "TopRight"
+#network_legend = "top-right"
 
 # Processes widget configuration
 #[processes]
-# The columns shown by the process widget. The following columns are supported:
+# The columns shown by the process widget. The following columns are supported (the GPU columns are only available if the GPU feature is enabled when built):
 # PID, Name, CPU%, Mem%, R/s, W/s, T.Read, T.Write, User, State, Time, GMem%, GPU%
 #columns = ["PID", "Name", "CPU%", "Mem%", "R/s", "W/s", "T.Read", "T.Write", "User", "State", "GMem%", "GPU%"]
 
@@ -94,36 +94,64 @@
 
 # Disk widget configuration
 #[disk]
+
+# By default, there are no disk name filters enabled. These can be turned on to filter out specific data entries if you
+# don't want to see them. An example use case is provided below.
 #[disk.name_filter]
+# Whether to ignore any matches. Defaults to true.
 #is_list_ignored = true
+# A list of filters to try and match.
 #list = ["/dev/sda\\d+", "/dev/nvme0n1p2"]
+# Whether to use regex. Defaults to false.
 #regex = true
+# Whether to be case-sensitive. Defaults to false.
 #case_sensitive = false
+# Whether to be require matching the whole word. Defaults to false.
 #whole_word = false
 
+# By default, there are no mount name filters enabled. An example use case is provided below.
 #[disk.mount_filter]
+# Whether to ignore any matches. Defaults to true.
 #is_list_ignored = true
+# A list of filters to try and match.
 #list = ["/mnt/.*", "/boot"]
+# Whether to use regex. Defaults to false.
 #regex = true
+# Whether to be case-sensitive. Defaults to false.
 #case_sensitive = false
+# Whether to be require matching the whole word. Defaults to false.
 #whole_word = false
 
 # Temperature widget configuration
 #[temperature]
+
+# By default, there are no temperature sensor filters enabled. An example use case is provided below.
 #[temperature.sensor_filter]
+# Whether to ignore any matches. Defaults to true.
 #is_list_ignored = true
+# A list of filters to try and match.
 #list = ["cpu", "wifi"]
+# Whether to use regex. Defaults to false.
 #regex = false
+# Whether to be case-sensitive. Defaults to false.
 #case_sensitive = false
+# Whether to be require matching the whole word. Defaults to false.
 #whole_word = false
 
 # Network widget configuration
 #[network]
+
+# By default, there are no network interface filters enabled. An example use case is provided below.
 #[network.interface_filter]
+# Whether to ignore any matches. Defaults to true.
 #is_list_ignored = true
+# A list of filters to try and match.
 #list = ["virbr0.*"]
+# Whether to use regex. Defaults to false.
 #regex = true
+# Whether to be case-sensitive. Defaults to false.
 #case_sensitive = false
+# Whether to be require matching the whole word. Defaults to false.
 #whole_word = false
 
 # These are all the components that support custom theming.  Note that colour support
