--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,29 +79,30 @@ logging = ["fern", "log", "time"]
 generate_schema = ["schemars", "serde_json", "strum"]
 
 [dependencies]
-anyhow = "1.0.87"
+anyhow = "1.0.89"
 backtrace = "0.3.74"
 cfg-if = "1.0.0"
-clap = { version = "4.5.16", features = ["default", "cargo", "wrap_help", "derive"] }
+clap = { version = "4.5.20", features = ["default", "cargo", "wrap_help", "derive"] }
 concat-string = "1.0.1"
 crossterm = "0.27.0"
 ctrlc = { version = "3.4.5", features = ["termination"] }
 dirs = "5.0.1"
-hashbrown = "0.14.5"
+# Maybe consider https://github.com/rust-lang/rustc-hash for some cases too?
+hashbrown = "0.15.0"
 humantime = "2.1.0"
-indexmap = "2.5.0"
+indexmap = "2.6.0"
 indoc = "2.0.5"
 itertools = "0.13.0"
 nvml-wrapper = { version = "0.10.0", optional = true, features = ["legacy-functions"] }
-regex = "1.10.6"
+regex = "1.11.0"
 serde = { version = "1.0.210", features = ["derive"] }
 starship-battery = { version = "0.9.1", optional = true }
 sysinfo = "=0.30.13"
-toml_edit = { version = "0.22.17", features = ["serde"] }
+toml_edit = { version = "0.22.22", features = ["serde"] }
 tui = { version = "0.27.0", package = "ratatui" }
 unicode-ellipsis = "0.2.0"
-unicode-segmentation = "1.11.0"
-unicode-width = "0.1.13"
+unicode-segmentation = "1.12.0"
+unicode-width = "0.2.0"
 
 # Used for logging.
 fern = { version = "0.6.2", optional = true }
@@ -114,10 +115,10 @@ serde_json = { version = "1.0.128", optional = true }
 strum = { version = "0.26.3", features = ["derive"], optional = true }
 
 [target.'cfg(unix)'.dependencies]
-libc = "0.2.158"
+libc = "0.2.159"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-rustix = { version = "0.38.36", features = ["fs", "param"] }
+rustix = { version = "0.38.37", features = ["fs", "param"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10.0"
@@ -135,8 +136,8 @@ windows = { version = "0.58.0", features = [
 ] }
 
 [target.'cfg(target_os = "freebsd")'.dependencies]
-serde_json = { version = "1.0.127" }
-sysctl = { version = "0.5.5" }
+serde_json = { version = "1.0.128" }
+sysctl = { version = "0.6.0" }
 filedescriptor = "0.8.2"
 
 [dev-dependencies]
@@ -149,11 +150,11 @@ tempfile = "3.12.0"
 portable-pty = "0.8.1"
 
 [build-dependencies]
-clap = { version = "4.5.17", features = ["default", "cargo", "wrap_help", "derive"] }
-clap_complete = "4.5.26"
-clap_complete_nushell = "4.5.3"
+clap = { version = "4.5.20", features = ["default", "cargo", "wrap_help", "derive"] }
+clap_complete = "4.5.33"
+clap_complete_nushell = "4.5.4"
 clap_complete_fig = "4.5.2"
-clap_mangen = "0.2.23"
+clap_mangen = "0.2.24"
 indoc = "2.0.5"
 
 [package.metadata.deb]
