refactor: separate schema generation to its own binary, go back to lib-bin setup
Decided it might be nicer to separate the schema generation bit to its
own binary. This does mean that we have to go back to the lib-bin
system, as otherwise passing shared code is _really_ hard.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,12 +40,23 @@ exclude = [
 # The oldest version I've tested that should still build - note this is not an official MSRV!
 rust-version = "1.81.0"
 
-[[bin]]
-name = "btm"
-path = "src/main.rs"
+[lib]
 test = true
 doctest = true
 doc = true
+
+[[bin]]
+name = "btm"
+path = "src/bin/main.rs"
+doc = false
+
+[[bin]]
+name = "schema"
+path = "src/bin/schema.rs"
+test = false
+doctest = false
+doc = false
+required-features = ["generate_schema"]
 
 # Compile dependencies with optimizations enabled, even in debug mode.
 [profile.dev.package."*"]
