make sure to rerun schema validation

--- a/.github/workflows/validate_schema.yml
+++ b/.github/workflows/validate_schema.yml
@@ -9,6 +9,7 @@ on:
       - main
     paths:
       - "schema/**"
+      - "scripts/schema/**"
       - ".github/workflows/validate_schema.yml"
 
 concurrency:
