--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -274,8 +274,7 @@ jobs:
       fail-fast: false
       matrix:
         info:
-          # Seems like cross' FreeBSD image is a bit broken? I
-          # get build errors, may be related to this issue:
+          # Seems like cross' FreeBSD image is a bit broken? I get build errors, may be related to this issue:
           # https://github.com/cross-rs/cross/issues/1291
           #
           # Alas, that's why we do it with VMs.
@@ -295,12 +294,6 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Set up Rust toolchain
-        uses: dtolnay/rust-toolchain@21dc36fb71dd22e3317045c0c31a3f4249868b17
-        with:
-          toolchain: ${{ matrix.info.rust || 'stable' }}
-          target: ${{ matrix.info.target }}
-
       - name: Enable Rust cache
         uses: Swatinem/rust-cache@9bdad043e88c75890e36ad3bbc8d27f0090dd609 # 2.7.3
         if: ${{ github.event_name != 'pull_request' || ! github.event.pull_request.head.repo.fork }} # If it is a PR, only if not a fork
@@ -313,7 +306,7 @@ jobs:
         uses: vmactions/freebsd-vm@v1.0.8
         with:
           release: "${{ matrix.info.os_release }}"
-          envs: "CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
+          envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
           usesh: true
           prepare: |
             pkg install -y curl bash
