--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -234,6 +234,11 @@ jobs:
           # Alas, that's why we do it with VMs.
           - {
               type: "freebsd",
+              os_release: "15.0",
+              target: "x86_64-unknown-freebsd",
+            }
+          - {
+              type: "freebsd",
               os_release: "14.1",
               target: "x86_64-unknown-freebsd",
             }
@@ -251,7 +256,7 @@ jobs:
 
       - name: Build (FreeBSD)
         if: ${{ matrix.info.type == 'freebsd' }}
-        uses: vmactions/freebsd-vm@v1.0.8
+        uses: vmactions/freebsd-vm@debf37ca7b7fa40e19c542ef7ba30d6054a706a4 # v1.1.5
         with:
           release: "${{ matrix.info.os_release }}"
           envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS COMPLETION_DIR MANPAGE_DIR"
@@ -262,7 +267,7 @@ jobs:
             sh rustup.sh --default-toolchain stable -y
           run: |
             . "$HOME/.cargo/env"
-            cargo build --release --verbose --locked --target=${{ matrix.info.target }} --features deploy
+            BTM_GENERATE=true BTM_BUILD_RELEASE_CALLER=${{ inputs.caller }} cargo build --release --verbose --locked --target=${{ matrix.info.target }} --features deploy
 
       - name: Move automatically generated completion/manpage
         shell: bash
