ci: bump macOS image from macos-12

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
               target: "aarch64-unknown-linux-gnu",
               cross: true,
             }
-          - { os: "macos-12", target: "x86_64-apple-darwin", cross: false }
+          - { os: "macos-13", target: "x86_64-apple-darwin", cross: false }
           - { os: "macos-14", target: "aarch64-apple-darwin", cross: false }
           - {
               os: "windows-2019",
@@ -177,8 +177,8 @@ jobs:
               rust: "beta",
             }
           - {
-              os: "macos-12",
-              target: "x86_64-apple-darwin",
+              os: "macos-14",
+              target: "aarch64-apple-darwin",
               cross: false,
               rust: "beta",
             }
