--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,7 +43,7 @@ jobs:
       matrix:
         info:
           - { os: "ubuntu-latest", target: "x86_64-unknown-linux-gnu" }
-          - { os: "macos-12", target: "x86_64-apple-darwin" }
+          - { os: "macos-14", target: "aarch64-apple-darwin", cross: false }
           - { os: "windows-2019", target: "x86_64-pc-windows-msvc" }
     steps:
       - name: Checkout repository
