--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,8 @@ required-features = ["generate_schema"]
 # Used for general builds.
 battery = ["starship-battery"]
 nvidia = ["nvml-wrapper"]
-gpu = ["nvidia"]
+amd = ["libamdgpu_top"]
+gpu = ["nvidia", "amd"]
 zfs = []
 deploy = ["battery", "gpu", "zfs"]
 default = ["deploy"]
@@ -112,6 +113,7 @@ libc = "0.2.162"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 rustix = { version = "0.38.40", features = ["fs", "param"] }
+libamdgpu_top = { version = "0.10.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10.0"
