--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,8 +62,7 @@ required-features = ["generate_schema"]
 # Used for general builds.
 battery = ["starship-battery"]
 nvidia = ["nvml-wrapper"]
-amd = ["libamdgpu_top"]
-gpu = ["nvidia", "amd"]
+gpu = ["nvidia"]
 zfs = []
 deploy = ["battery", "gpu", "zfs"]
 default = ["deploy"]
@@ -113,7 +112,6 @@ libc = "0.2.162"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 rustix = { version = "0.38.40", features = ["fs", "param"] }
-libamdgpu_top = { version = "0.10.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10.0"
