--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,11 +75,11 @@ generate_schema = ["schemars", "serde_json", "strum"]
 anyhow = "1.0.95"
 backtrace = "0.3.74"
 cfg-if = "1.0.0"
-clap = { version = "4.5.23", features = ["default", "cargo", "wrap_help", "derive"] }
+clap = { version = "4.5.26", features = ["default", "cargo", "wrap_help", "derive"] }
 concat-string = "1.0.1"
 crossterm = "0.28.1"
 ctrlc = { version = "3.4.5", features = ["termination"] }
-dirs = "5.0.1"
+dirs = "6.0.0"
 # Maybe consider https://github.com/rust-lang/rustc-hash for some cases too?
 hashbrown = "0.15.2"
 humantime = "2.1.0"
@@ -97,9 +97,9 @@ unicode-ellipsis = "0.3.0"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.0"
 
-# Used for logging.
+# Used for logging. Mostly a debugging tool.
 fern = { version = "0.7.1", optional = true }
-log = { version = "0.4.22", optional = true }
+log = { version = "0.4.25", optional = true }
 time = { version = "0.3.37", features = ["local-offset", "formatting", "macros"], optional = true }
 
 # These are just used for JSON schema generation.
@@ -111,14 +111,14 @@ strum = { version = "0.26.3", features = ["derive"], optional = true }
 libc = "0.2.169"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-rustix = { version = "0.38.42", features = ["fs", "param"] }
+rustix = { version = "0.38.43", features = ["fs", "param"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10.0"
 mach2 = "0.4.2"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.58.0", features = [
+windows = { version = "0.59.0", features = [
     "Win32_Foundation",
     "Win32_Security",
     "Win32_Storage_FileSystem",
@@ -143,11 +143,11 @@ tempfile = "3.15.0"
 portable-pty = "0.8.1"
 
 [build-dependencies]
-clap = { version = "4.5.23", features = ["default", "cargo", "wrap_help", "derive"] }
-clap_complete = "4.5.40"
+clap = { version = "4.5.26", features = ["default", "cargo", "wrap_help", "derive"] }
+clap_complete = "4.5.42"
 clap_complete_nushell = "4.5.5"
 clap_complete_fig = "4.5.2"
-clap_mangen = "0.2.24"
+clap_mangen = "0.2.26"
 indoc = "2.0.5"
 
 # Compile dependencies with optimizations enabled, even in debug mode.
