--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -333,7 +333,7 @@ jobs:
       - name: Build MSI file
         shell: powershell
         env:
-          BTM_GENERATE: ""
+          BTM_GENERATE: true
         run: |
           cargo wix --nocapture
 
