--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["command-line-utilities", "visualization"]
 exclude = [
     ".cargo-husky/",
     ".github/",
-    ".idea",
+    ".idea/",
     ".vscode/",
     "assets/",
     "desktop/",
