--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,7 +92,7 @@ starship-battery = { version = "0.10.1", optional = true }
 sysinfo = "=0.30.13"
 timeless = "0.0.14-alpha"
 toml_edit = { version = "0.22.26", features = ["serde"] }
-tui = { version = "0.29.0", package = "ratatui" }
+tui = { version = "0.29.0", package = "ratatui", features = ["unstable-rendered-line-info"] }
 unicode-ellipsis = "0.3.0"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.0"
@@ -220,7 +220,6 @@ depends = "libc6:armhf (>= 2.28)"
 
 [package.metadata.wix]
 output = "bottom_x86_64_installer.msi"
-
 
 [package.metadata.generate-rpm]
 assets = [
