--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,7 +1,7 @@
 # Site information
 site_name: bottom
 site_author: Clement Tsang
-site_url: https://clementtsang.github.io/bottom
+site_url: https://bottom.pages.dev
 site_description: >-
   A customizable cross-platform graphical process/system monitor for the terminal. Supports Linux, macOS, and Windows.
 docs_dir: "content/"
