--- a/scripts/windows/choco/bottom.nuspec.template
+++ b/scripts/windows/choco/bottom.nuspec.template
@@ -31,7 +31,7 @@ This is a nuspec. It mostly adheres to https://docs.nuget.org/create/Nuspec-Refe
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/ClementTsang/bottom</projectSourceUrl>
     <packageSourceUrl>https://github.com/ClementTsang/choco-bottom</packageSourceUrl>
-    <docsUrl>https://clementtsang.github.io/bottom/stable</docsUrl>
+    <docsUrl>https://bottom.pages.dev/stable</docsUrl>
     <bugTrackerUrl>https://github.com/ClementTsang/bottom/issues</bugTrackerUrl>
     <tags>cli cross-platform terminal top tui monitoring bottom btm</tags>
     <summary>A customizable cross-platform graphical process/system monitor for the terminal.</summary>
