--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -8,7 +8,7 @@ body:
       label: Checklist
       options:
         - label: >
-            I've looked through [the documentation](https://clementtsang.github.io/bottom/nightly/) and 
+            I've looked through [the documentation](https://bottom.pages.dev/nightly/) and 
             [existing open issues](https://github.com/ClementTsang/bottom/issues?q=is%3Aopen+is%3Aissue+label%3Afeature)
             for similar feature requests.
           required: true
