--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -166,11 +166,12 @@ nav:
       - "Command-line Options": configuration/command-line-options.md
       - "Config File":
           - configuration/config-file/index.md
-          - "Flags": configuration/config-file/flags.md
-          - "Styling": configuration/config-file/styling.md
-          - "Layout": configuration/config-file/layout.md
+          - "CPU Widget": configuration/config-file/cpu.md
           - "Data Filtering": configuration/config-file/data-filtering.md
-          - "Processes": configuration/config-file/processes.md
+          - "Flags": configuration/config-file/flags.md
+          - "Layout": configuration/config-file/layout.md
+          - "Processes Widget": configuration/config-file/processes.md
+          - "Styling": configuration/config-file/styling.md
   - "Contribution":
       - "Issues, Pull Requests, and Discussions": contribution/issues-and-pull-requests.md
       - "Documentation": contribution/documentation.md
