--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -228,8 +228,8 @@ jobs:
       fail-fast: false
       matrix:
         info:
-          # Seems like cross' FreeBSD image is a bit broken? I get build errors, may be related to this issue:
-          # https://github.com/cross-rs/cross/issues/1291
+          # Seems like cross's FreeBSD image is a bit broken? I get build errors,
+          # may be related to this issue: https://github.com/cross-rs/cross/issues/1291
           #
           # Alas, that's why we do it with VMs.
           - {
@@ -239,12 +239,12 @@ jobs:
             }
           - {
               type: "freebsd",
-              os_release: "14.1",
+              os_release: "14.2",
               target: "x86_64-unknown-freebsd",
             }
           - {
               type: "freebsd",
-              os_release: "13.3",
+              os_release: "13.5",
               target: "x86_64-unknown-freebsd",
             }
     steps:
@@ -256,7 +256,7 @@ jobs:
 
       - name: Build (FreeBSD)
         if: ${{ matrix.info.type == 'freebsd' }}
-        uses: vmactions/freebsd-vm@debf37ca7b7fa40e19c542ef7ba30d6054a706a4 # v1.1.5
+        uses: vmactions/freebsd-vm@c3ae29a132c8ef1924775414107a97cac042aad5 # v1.2.0
         with:
           release: "${{ matrix.info.os_release }}"
           envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS COMPLETION_DIR MANPAGE_DIR"
